# hello-agents

./: README.md  README_EN.md
Co-creation-projects/1zrj-DataAnalysisAgent/: README.md  main.ipynb  requirements.txt
Co-creation-projects/Apricity-InnocoreAI/: .env.example  .gitignore  FEATURES.md  QUICKSTART.md  README.md  USAGE_GUIDE.md  __init__.py  diagnose.py  install.py  main.py  requirements.txt  run.py  setup.py
Co-creation-projects/JJason-DeepCastAgent/: .gitignore
Co-creation-projects/JJason-DeepCastAgent/backend/: env.example  pyproject.toml  requirements.txt
Co-creation-projects/JJason-DeepCastAgent/backend/scripts/: test_agent_workflow.py  test_audio_generator.py  verify_ecnu_llm.py  verify_ecnu_tts.py  verify_ffmpeg.py  verify_search.py
Co-creation-projects/JJason-DeepCastAgent/backend/src/: agent.py  config.py  main.py  models.py  prompts.py  utils.py
Co-creation-projects/JJason-DeepCastAgent/backend/src/services/: __init__.py  audio_generator.py  audio_synthesizer.py  notes.py  planner.py  reporter.py  script_generator.py  search.py  summarizer.py  text_processing.py  tool_events.py
Co-creation-projects/Shawnxyxy-HealthRecordAgent/: README.md  requirements.txt
Co-creation-projects/YYHDBL-HelloCodeAgentCli/: .gitignore  README.md  __init__.py  requirement.txt
Co-creation-projects/Yixiang-Wu-LearningAgent/: .env.example  README.md  main.py  requirements.txt
Co-creation-projects/alexrunner-DataAnalysisAgent/: .env.example  README.md  main.py  requirements.txt
Co-creation-projects/allen2000-FashionDailyDress/: .env.example  README.md  fashion_agent.py  gradio_app.py  multi_agent_coordinator.py  requirements.txt  simple_multi_agent.py  weather.py  weather_mcp.py
Co-creation-projects/bichchibui5-hub-EmailSmartAssistant/: EmailSmartAssistant.ipynb  EmailSmartAssistant_HelloAgents.ipynb  README.md  demo.py  email_assistant.py  main.ipynb  requirements.txt  test_installation.py
Co-creation-projects/chen070808-ProgrammingTutor/: .env.example  README.md  main.ipynb  requirements.txt
Co-creation-projects/haoye2-UnivesalAgent/: .env.example  .gitignore  main.ipynb
Co-creation-projects/melxy1997-ColumnWriter/: .env example  .gitignore  README.md  agents.py  config.py  exporter.py  main.py  models.py  orchestrator.py  prompts.py  pyproject.toml  requirements.txt  search_mcp_server.py  utils.py
Co-creation-projects/melxy1997-ColumnWriter/output_20251121_190555/: REPORT.md  column_data.json  topic_001_揭秘JavaScript异步编程的本质与Event Loop机制.md  topic_002_从回调地狱到优雅的Promise与asyncawait.md  topic_003_精通JavaScript异步高级模式并发控制与性能优化.md
Co-creation-projects/melxy1997-ColumnWriter/output_20251125_201358/: REPORT.md  column_data.json  topic_001_前端工程化导论与基础构建.md  topic_002_自动化构建与开发效率提升.md  topic_003_质量保障与持续交付实践.md  topic_004_高级优化架构与未来趋势.md
Extra-Chapter/: Extra01-参考答案.md  Extra02-上下文工程补充知识.md  Extra03-Dify智能体创建保姆级操作流程.md  Extra04-DatawhaleFAQ.md  Extra05-AgentSkills解读.md  Extra06-GUIAgent科普与实战.md  Extra07-环境配置.md  Extra08-如何写出好的Skill.md  Extra09-Agent应用开发实践踩坑与经验分享.md
code/chapter1/: FirstAgentTest.ipynb  (+1 more)
docs/: Preface.md  README.md  README_EN.md  _sidebar_en.md  index.html  前言.md
(+442 files in other folders)
