[project]
name = "helloagents-column-writer"
version = "1.0.0"
description = "基于 HelloAgents 框架的智能专栏作家系统"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "HelloAgents Column Writer Team"}
]
keywords = ["ai", "agent", "llm", "column-writing", "hello-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "hello-agents>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastmcp>=2.0.0",
    "tavily-python>=0.3.0",
    "google-search-results>=2.4.2",
    "huggingface_hub>=0.19.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
# 这是一个应用项目，不需要构建包
# 只用于依赖管理

[tool.uv.sources]
# 如果 hello-agents 是本地开发版本，可以这样指定：
# hello-agents = { path = "../hello-agents", editable = true }

